plugins {
    id 'com.robothy.github-repository-release-plugin' version '1.3'
    id 'jacoco'
//    id "com.dorongold.task-tree" version "2.1.0"
}

repositories {
    mavenLocal()
    mavenCentral()
}

allprojects {
    pluginManager.withPlugin('java') {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
        }
    }
}

tasks.register('mergeReports', JacocoReport) {
    executionData.from(project.fileTree(dir: '.', include: '**/build/jacoco/test.exec'))
    sourceDirectories.from(project.fileTree(dir: '.', include: '**/src/main/java/**', exclude: 'local-s3-docker/src/main/java/**'))
    classDirectories.from(project.fileTree(dir: '.', include: '**/build/classes/java/main/**', exclude: 'local-s3-docker/build/classes/java/main/**'))
    reports {
        xml.required.set(true)
        html.required.set(true)
        //csv.required.set(true)
    }
}

project.subprojects.each {
    it.afterEvaluate {
        mergeReports.dependsOn(it.tasks['test'])
        if (it.plugins.hasPlugin('local-s3.publish')) {
            rootProject.tasks.release.dependsOn(it.tasks['publishAllPublicationsToProjectLocalRepository'])
            rootProject.tasks.release.dependsOn(it.tasks['zipMavenCentralPortalPublication'])
            rootProject.tasks.release.dependsOn(it.tasks['uploadMavenCentralPortal'])
        }
    }
}